--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 simu_stone/stone_fringes.mat filter=lfs diff=lfs merge=lfs -text
 simu_stone/stone_bfringes.mat filter=lfs diff=lfs merge=lfs -text
+simu_plane/plane_bfringes.mat filter=lfs diff=lfs merge=lfs -text
